# setup-py-upgrade

./: .pre-commit-config.yaml  README.md  setup.cfg  setup_py_upgrade.py
tests/: setup_py_upgrade_test.py
