[metadata]
name = setup_py_upgrade
description = upgrade a setup.py to declarative metadata
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/asottile/setup-my-upgrade
version = 0.0.2
author = Anthony Sottile
author_email = asottile@umich.edu
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = setup_py_upgrade

[options.entry_points]
console_scripts =
    setup-py-upgrade=setup_py_upgrade:main

[bdist_wheel]
universal = True
