[metadata]
name = setup_py_upgrade
version = 1.0.2
description = upgrade a setup.py to declarative metadata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/setup-py-upgrade
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = setup_py_upgrade
python_requires = >=3.6

[options.entry_points]
console_scripts =
    setup-py-upgrade=setup_py_upgrade:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
